feature(trips): Admin can cancel a trip [Started #167734146]
